# yandex_alice_quest_dictionary

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
dictionaries/: space.csv  space.txt  test.csv
yandex_alice_quest_dictionary/: DockerFile  all_text.json  handlers.py  load_img.py  main.py  specification.md
yandex_alice_quest_dictionary/db/: db.py  mongo.py  setup.py
